--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.23"
   }
 }
